--- a/views/hair.ejs
+++ b/views/hair.ejs
@@ -18,7 +18,7 @@
                                     <h2 class="title">Hair Selection</h2>
                                 </div>
                                 <div class="col-md-6 col-sm-6 simple-text">
-                                    <p class="description text-left"><a href="http://www.hairbylenaj.mayvenn.com"><img style="margin-top: -70px;width: 90%;" src="/images/Mayven%20Logo%20Clear.png" target="_blank" /></a></p>
+                                    <!--<p class="description text-left"><a href="http://www.hairbylenaj.mayvenn.com"><img style="margin-top: -70px;width: 90%;" src="/images/Mayven%20Logo%20Clear.png" target="_blank" /></a></p>-->
                                 </div>
                             </div>
                         </article>
