--- a/views/home.ejs
+++ b/views/home.ejs
@@ -114,7 +114,7 @@
 
 </section>
 
-<h1 class="align-center" style="float: none !important;margin: 0;padding: 40px 0 45px 0;text-align: center;"><a href="http://www.hairbylenaj.mayvenn.com"><img src="/images/Mayven%20Logo%20Clear.png" target="_blank" style="height: 96px;width: auto;"/></a></h1>
+<!--<h1 class="align-center" style="float: none !important;margin: 0;padding: 40px 0 45px 0;text-align: center;"><a href="http://www.hairbylenaj.mayvenn.com"><img src="/images/Mayven%20Logo%20Clear.png" target="_blank" style="height: 96px;width: auto;"/></a></h1>-->
 
 <!--
 @include('includes.slider')
